--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
+  },
+  "name": "rest-api",
+  "version": "1.0.0",
+  "main": "express.js",
+  "devDependencies": {},
+  "scripts": {
+    "start":"node index.js",
+    "dev":"nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
