--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "express.js",
   "devDependencies": {},
   "scripts": {
-    "start":"node index.js",
-    "dev":"nodemon index.js",
+    "start":"node express.js",
+    "dev":"nodemon express.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
